[gd_scene load_steps=10 format=3 uid="uid://cglhkt704cl5u"]

[ext_resource type="Script" path="res://systems/ui/menus/pause_menu.gd" id="1_8pmj7"]
[ext_resource type="Theme" uid="uid://by7y30d2dbxb2" path="res://assets/ui/themes/menu_title_theme.tres" id="1_ejo7b"]
[ext_resource type="Theme" uid="uid://l2whpxkwhcdn" path="res://assets/ui/themes/menu_ui_theme.tres" id="1_nbw54"]
[ext_resource type="PackedScene" uid="uid://b8xs6q5trxx58" path="res://systems/ui/menus/options_menu/options_menu.tscn" id="2_xaeyw"]
[ext_resource type="PackedScene" uid="uid://bucg0txabpsyp" path="res://utils/sounds/singleton_interactor.tscn" id="5_behqx"]

[sub_resource type="Animation" id="Animation_fhxqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1vft7"]
resource_name = "close_pause_menu"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-640, 0)]
}

[sub_resource type="Animation" id="Animation_574ap"]
resource_name = "open_pause_menu"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-640, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sl42d"]
_data = {
"RESET": SubResource("Animation_fhxqc"),
"close_pause_menu": SubResource("Animation_1vft7"),
"open_pause_menu": SubResource("Animation_574ap")
}

[node name="PauseMenu2" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8pmj7")
options_scene = ExtResource("2_xaeyw")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="MenuTitle" type="RichTextLabel" parent="PauseMenu"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 994.0
offset_bottom = 192.0
theme = ExtResource("1_ejo7b")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[b]PAUSED"

[node name="MenuSubtitle" type="RichTextLabel" parent="PauseMenu"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 415.0
offset_bottom = 240.0
theme = ExtResource("1_ejo7b")
theme_override_colors/default_color = Color(0.545098, 0.545098, 0.545098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
bbcode_enabled = true
text = "but not over"

[node name="PauseMenuButtons" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 384.0
offset_bottom = 480.0
theme_override_constants/separation = 0

[node name="ContinueButton" type="Button" parent="PauseMenu/PauseMenuButtons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_nbw54")
text = "CONTINUE"
alignment = 0

[node name="HoverSound" parent="PauseMenu/PauseMenuButtons/ContinueButton" instance=ExtResource("5_behqx")]
singleton = 1
method_to_call = "_SFX_UIButtonHover"
connect_signal = "mouse_entered"

[node name="PressSound" parent="PauseMenu/PauseMenuButtons/ContinueButton" instance=ExtResource("5_behqx")]
singleton = 1
method_to_call = "_SFX_UIButtonPress"
connect_signal = "button_up"

[node name="OptionsButton" type="Button" parent="PauseMenu/PauseMenuButtons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_nbw54")
text = "OPTIONS"
alignment = 0

[node name="HoverSound" parent="PauseMenu/PauseMenuButtons/OptionsButton" instance=ExtResource("5_behqx")]
singleton = 1
method_to_call = "_SFX_UIButtonHover"
connect_signal = "mouse_entered"

[node name="PressSound" parent="PauseMenu/PauseMenuButtons/OptionsButton" instance=ExtResource("5_behqx")]
singleton = 1
method_to_call = "_SFX_UIButtonPress"
connect_signal = "button_up"

[node name="MainMenuButton" type="Button" parent="PauseMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -144.0
offset_right = 384.0
offset_bottom = -64.0
grow_vertical = 0
theme = ExtResource("1_nbw54")
text = "ABANDON"
alignment = 0

[node name="HoverSound" parent="PauseMenu/MainMenuButton" instance=ExtResource("5_behqx")]
singleton = 1
method_to_call = "_SFX_UIButtonHover"
connect_signal = "mouse_entered"

[node name="PressSound" parent="PauseMenu/MainMenuButton" instance=ExtResource("5_behqx")]
singleton = 1
method_to_call = "_SFX_UIButtonPress"
connect_signal = "button_up"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu"]
libraries = {
"": SubResource("AnimationLibrary_sl42d")
}

[connection signal="button_up" from="PauseMenu/PauseMenuButtons/ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="PauseMenu/PauseMenuButtons/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="PauseMenu/MainMenuButton" to="." method="_on_main_menu_button_button_up"]
